--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,6 +1,6 @@
 html,
 body {
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height: 100%;
 }
 .navbar {
@@ -67,47 +67,26 @@ body {
     }
 }
 
-div.canvas {
-    position: absolute;
-    top: 90px;
-    left: 60px;
-    width: 640px;
-    height: 480px;
-    border: 1px solid #999;
-    background: white;
-
-}
-
 div.canvas-rect {
     position: absolute;
-    margin-left: 20px;
-    margin-top: 10px;
     height: 18px;
     background: green;
     color: white;
     text-align: right;
     line-height: 18px;
+    z-index: -1;
 
-    transition: all 1s ease-in;
-    -moz-transition: all 1s ease-in; /* Firefox 4 */
-    -webkit-transition: all 1s ease-in; /* Safari 和 Chrome */
-    -o-transition: all 1s ease-in; /* Opera */
-
-}
-
-div.trans {
-    transition: all 1s ease-in;
-    -moz-transition: all 1s ease-in; /* Firefox 4 */
-    -webkit-transition: all 1s ease-in; /* Safari 和 Chrome */
-    -o-transition: all 1s ease-in; /* Opera */
+    transition: all .7s ease-in;
+    -moz-transition: all .7s ease-in; /* Firefox 4 */
+    -webkit-transition: all .7s ease-in; /* Safari 和 Chrome */
+    -o-transition: all .7s ease-in; /* Opera */
 }
 
 div.canvas-inner {
-    position: absolute;
-    top: 90px;
-    left: 60px;
-    width: 640px;
-    height: 480px;
+    position: relative;
+    width: 240px;
+    height: 80px;
     border: 1px solid #999;
-    background: white;
+    background: rgba(0,0,0,0.1);
+    z-index: 0;
 }
