--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -90,3 +90,10 @@ div.canvas-inner {
     background: rgba(0,0,0,0.1);
     z-index: 0;
 }
+
+div.canvas-cover {
+    position: relative;
+    height: 80px;
+    background: white;
+    border: 0px solid #999;
+}
