--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,6 +3,7 @@
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href='http://fonts.font.im/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
       <title>Welcome to dynamic-ranking</title>
   </head>
   <body>
@@ -29,8 +30,10 @@
     </div>
 
     <!-- scripts and styles -->
+    <!-- 
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/font-awesome/css/font-awesome.min.css" %}
+    -->
     {% style "/css/screen.css" %}
 
     <script type="text/javascript">
