--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,7 +3,7 @@
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="//fonts.font.im/css?family=Pathway+Gothic+One" rel="stylesheet" type="text/css">
+      <link href="//fonts.cat.net/css?family=Pathway+Gothic+One" rel="stylesheet" type="text/css">
       <title>Welcome to dynamic-ranking</title>
   </head>
   <body>
