--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -251,6 +251,33 @@ div.progress-past {
     background-size: 25px 25px;
 }
 
+
+div.data-type-btn {
+    position: absolute;
+    top: 160px;
+    right: 680px;
+    width: 70px;
+    border: 1px solid black;
+    background: black;
+    font-size: 16px;
+    color: #666;
+    height: 16px;
+    line-height: 16px;
+}
+
+div.axes-btn {
+    position: absolute;
+    top: 160px;
+    right: 600px;
+    width: 54px;
+    border: 1px solid black;
+    background: black;
+    font-size: 16px;
+    color: #666;
+    height: 16px;
+    line-height: 16px;
+}
+
 div.timer-btn {
     position: absolute;
     top: 160px;
@@ -265,6 +292,8 @@ div.timer-btn {
     height: 16px;
     line-height: 16px;
 }
+
+
 
 div.v-axes {
 }
@@ -311,3 +340,4 @@ img.logo {
     height: 64px;
     background: #FFF;
 }
+
