--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -9,7 +9,7 @@
   <body>
     
     <div id="app">
-      <div class="container-fluid">
+      <!--div class="container-fluid">
         <div class="card-deck">
           <div class="card-block">
             <h4>Welcome to dynamic-ranking</h4>
@@ -26,7 +26,7 @@
             <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
           </div>
         </div>
-      </div>
+      </div-->
     </div>
 
     <!-- scripts and styles -->
